update index.html dan style.css
menambahkan home, new arrivals, brand, contact

--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
+<!DOCTYPE html>
+<html lang="id">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TRIEFWARE</title>
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav>
+		<ul>
+		  <li class="logo"><a href="index.html" class="page-scroll">TRIEFWARE</a></li>
+		</ul>
+		<ul class="menu">
+		  <li><a class="page-scroll" href="shop.html">Shop</a></li>
+		  <li><a class="page-scroll" href="#newarrivals">New Arrivals</a></li>
+		  <li><a class="page-scroll" href="#brands">Brands</a></li>
+		  <li><input class="search_input" type="text" name="query" placeholder="Search for products..."></li>
+		  <li><button class="buttoncart" onclick="window.location.href='cart.html'"></li>
+		  <li><button class="buttonlogin" onclick="window.location.href='login.html'"></li>
+		</ul>
+	  </nav>
+	<header id="home" >
+			<div class="judul">
+				<div>
+					<h1>FIND SHOES THAT <br> <b>MATCHES YOUR STYLE</b></h1>
+				</div>
+				<div class="buttonshopnow">
+					<button onclick="window.location.href='shop.html'">Shop Now</button>
+				</div>
+				
+			</div>
+			<div class="fitur">
+				<div class="kotak">
+					<h1>200+</h1>
+					<p>International Brands</p>
+				</div>
+				<div class="kotak">
+					<h1>+2.000</h1>
+					<p>High-Quality Products</p>
+				</div>
+				<div class="kotak">
+					<h1>+30.000</h1>
+					<p>Happy Customers</p>
+				</div>	
+			</div>
+	</header>
+    <section id="newarrivals">
+		<div class="arrival">
+			<h1>New Arrivals</h1>
+			<div>
+				<div class="produk1">
+					<div class="box">
+						<img src="./img/produk 1.1.png" width="259px" height="255px" alt="">
+						<p href="">Nike Pegasus 40</p>
+						<p>Rp. 2,399,000</p>
+					</div>
+					<div class="box">
+						<img src="./img/produk 1.2.png" width="259px"height="255px"alt="">
+						<p href="">Adidas NMD_S1 Shoes</p>
+						<p>Rp. 2,099,000</p>
+					</div>
+					<div class="box">
+						<img src="./img/produk 1.3.png" width="259px"height="255px" alt="">
+						<p href="">Reebok Eenergen LITE Men</p>
+						<p>Rp. 2.900.000</p>
+					</div>
+					<div class="box">
+						<img src="./img/produk 1.4.png" width="259px"height="255px" alt="">
+						<p href="">Air Jordan 1 Elevate High</p>
+						<p>Rp. 559.000</p>
+					</div>
+				</div>
+				<div class="produk2">
+					<div class="box">
+						<img src="./img/produk 2.1.png" width="259px" height="255px" alt="">
+						<p href="">Adidas X_PLRBOOST Shoes</p>
+						<p>Rp. 2.250.000</p>
+					</div>
+					<div class="box">
+						<img src="./img/produk 2.2.png" width="259px"height="255px"alt="">
+						<p href="">Chuck Taylor Remastered</p>
+						<p>Rp. 1.599.000</p>
+					</div>
+					<div class="box">
+						<img src="./img/produk 2.3.png" width="259px"height="255px" alt="">
+						<p href="">Nike Air Max 90</p>
+						<p>Rp. 2,099,000</p>
+					</div>
+					<div class="box">
+						<img src="./img/produk 2.4.png" width="259px"height="255px" alt="">
+						<p href="">New Balance 990</p>
+						<p>Rp. 4.799.000</p>
+					</div>
+				</div>
+				<div class="viewall1">
+					<button href="#">View All</button>
+				</div>
+				<div class="persegi">
+					<div class="judul-persegi"><h1>BROWSE BY STYLE</h1></div>
+					<button class="buttoncasual" href="#">Casual</button>
+					<button class="buttonformal" href="#">Formal</button>
+					<button class="buttonsport" href="#">Sport</button>
+				</div>
+			</div>
+		</div>
+    </section>
+	<section id="brands">
+		<div class="tulisanbrand">
+			<h1>Brands</h1>
+			<div class="branding">
+				<div class="branding-1">
+					<div class="box_brand">
+						<img src="./img/logo 1.png" width="150px" height="150px" alt="Adidas">
+					</div>
+					<div class="box_brand">
+						<img src="./img/logo 2.png" width="150px"height="150px" alt="New Balance">
+					</div>
+					<div class="box_brand">
+						<img src="./img/logo 3.png" width="150px"height="150px" alt="Converse">
+					</div>
+					<div class="box_brand">
+						<img src="./img/logo 4.png" width="150px"height="150px" alt="Reebok">
+					</div>
+					<div class="box_brand">
+						<img src="./img/logo 5.png" width="150px"height="150px" alt="Nike">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="contact">
+		<div>
+			<h1 class="contact_text">STAY UP TO DATE ABOUT OUR LATEST OFFERS</h1>
+		</div>
+		<div>
+			<input class="search_contact" type="text" name="query" placeholder="Enter your email Address">
+		</div>
+		<div class="button_contact">
+			<button href="#">Subcribe to Newsletter</button>
+		</div>
+	</section>
+    <footer>
+        <p>&copy; 2023 TRIEFWARE. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
