update shop.html and shop.css
menambahkan section dan css pada shop

--- a/shop.html
+++ b/shop.html
@@ -208,6 +208,51 @@
 			  <button href="#">Subcribe to Newsletter</button>
 		  </div>
 	  </section>
+    <br>
+	  <br>
+	  <section>
+		  <div class="garis-footer"></div>
+	  </section>
+	  <section class="footer">
+
+          <div class="footer-container">
+
+              <div class="box">
+                  <h3>get help</h3>
+                  <a href="">FAQ</a>
+                  <a href="">Shipping</a>
+                  <a href="">Returns</a>
+                  <a href="">Payment Status</a>
+                  <a href="">Privacy Policy</a>
+              </div>
+
+              <div class="box">
+                  <h3>quick links</h3>
+                  <a href="index.html">home</a>
+                  <a href="shop.html">products</a>
+                  <a href="index.html#newarrivals">new arrivals</a>
+                  <a href="index.html#brands">brands</a>
+              </div>
+
+              <div class="box" id="contact">
+                  <h3>contact info</h3>
+                  <a href="#">+62 895-0452-7071</a>
+                  <a href="#">+62 813-3084-6262</a>
+                  <a href="#" class="lower">triefware@gmail.com</a>
+                  <a href="#" class="lower">customercare@gmail.com</a>
+                  <a href="#">Surabaya, Indonesia - 60230</a>
+              </div>
+
+              <div class="social-media" id="follow">
+                  <h3>follow us</h3>
+                  <a href="https://web.facebook.com/" target="_blank"><img src="./img/facebook-logo.png" alt=""></a>
+                  <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram-alt-logo.png" alt=""></a>
+                  <a href="https://twitter.com/" target="_blank"><img src="./img/twitter-logo.png" alt=""></a>
+                  <a href="https://www.youtube.com/" target="_blank"><img src="./img/youtube-logo.png" alt=""></a>
+                  <a href="https://www.linkedin.com/" target="_blank"><img src="./img/linkedin-logo.png" alt=""></a>
+              </div>
+          </div>
+      </section>
       <footer>
           <p>&copy; 2023 TRIEFWARE. All rights reserved.</p>
       </footer>
