--- a/login.html
+++ b/login.html
@@ -1,79 +1,69 @@
 <!DOCTYPE html>
-<html lang="id">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TRIEFWARE</title>
-        <link rel="stylesheet" href="globals.css" />
-        <link rel="stylesheet" href="login.css" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    </head>
-    <body>
-        <nav>
-          <ul>
-            <li class="logo"><a href="index.html" class="page-scroll">TRIEFWARE</a></li>
-          </ul>
-          <ul class="menu">
-            <li><a class="page-scroll" href="shop.html">Shop</a></li>
-            <li><a class="page-scroll" href="index.html#newarrivals">New Arrivals</a></li>
-            <li><a class="page-scroll" href="index.html#brands">Brands</a></li>
-            <li><input class="search_input" type="text" name="query" placeholder="Search for products..."></li>
-            <li><button class="buttoncart" onclick="window.location.href='cart.html'"></li>
-            <li><button class="buttonlogin" onclick="window.location.href='login.html'"></li>
-          </ul>
-        </nav>
+<html lang="en">
 
-        <section>
-            <div class="framelogin">
-                <div class="textlogin">
-                    <h1>Login</h1>
-                    <div>
-                        <div>
-                            <form class="form_login">
-                                <div class="labelemail">
-                                    <label for="email">Email or Username</label>
-                                </div>
-                                    <div class="inputan">
-                                        <input type="text" id="email" name="email" required placeholder="email or Username">
-                                    </div>
-                                <div class="labelpassword">
-                                    <label for="password">Password</label>
-                                </div>
-                                    <div class="inputan">
-                                        <input type="password" id="password" name="password" required placeholder="password">
-                                    </div>
-                                <div class="forget-pss">
-                                    <a href="#">Forget Password</a>
-                                </div>
-                                <div class="loginsubmit">
-                                    <button type="submit">Login</button>
-                                </div>
-                            </form>
-                                <div class="account">
-                                    <p>Don't have an account? <a href="signup.html">Sign Up Here</a></p>
-                                    <br>
-                                    <p>Or SignUp Using</p>
-                                </div>
-                            <div class="sosmed-signup">
-                                <ul>
-                                    <li>
-                                        <a href="#"><i class="fab fa-facebook-f icon"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fab fa-google icon"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fab fa-twitter icon"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TRIEFWARE-Login</title>
+  <link rel="stylesheet" href="login.css">
+</head>
+
+<body>
+<div class="wrapper">
+      <div class="title-text">
+        <div class="title login">Sign In</div>
+        <div class="title signup">Sign Up</div>
+      </div>
+      <div class="form-container">
+
+        <div class="slide-controls">
+          <input type="radio" name="slide" id="login" checked>
+          <input type="radio" name="slide" id="signup">
+          <label for="login" class="slide login">Sign In</label>
+          <label for="signup" class="slide signup">Sign up</label>
+          <div class="slider-tab"></div>
+        </div>
+
+        <div class="form-inner">
+          <form action="index.html" class="login">
+            <pre>
+            </pre>
+            <div class="field">
+              <input type="text" placeholder="Email " required>
             </div>
-    </section>
-    <footer>
-        <p>&copy; 2023 TRIEFWARE. All rights reserved.</p>
-    </footer>
+            <div class="field">
+              <input type="password" placeholder="Password " required>
+            </div>
+            <div class="pass-link"><a href="#">Forget password?</a></div>
+            <div class="field btn">
+              <div class="btn-layer"></div>
+              <input type="submit" value="Login">
+            </div>
+            <div class="signup-link">craete account <a href="">Register now</a></div>
+          </form>
+          <form action="#" class="signup">
+            <div class="field">
+              <input type="text" placeholder="Username " required>
+            </div>
+            <div class="field">
+              <input type="text" placeholder="Email" required>
+            </div>
+            <div class="field">
+              <input type="password" placeholder="Password" required>
+            </div>
+            <div class="field">
+              <input type="password" placeholder="Repeat-password " required>
+            </div>
+            <div class="field btn">
+              <div class="btn-layer"></div>
+              <input type="submit" value="Sign up">
+            </div>
+            <div class="signup-link">Already have an account <a href="">Login</a></div>
+          </form>
+        </div>
+      </div>
+    </div>
+  <script  src="script.js"></script>
+
 </body>
 </html>
