--- a/shop.html
+++ b/shop.html
@@ -71,39 +71,34 @@
           <div class="flexframesize">
             <div class="flexsize2">
               <div class="buttonsize">
-                <button href="#">XX-Small</button>
+                <button href="#">US 7</button>
               </div>
               <div class="buttonsize">
-                <button href="#">X-Small</button>
+                <button href="#">US 7.5</button>
               </div>
             </div>
             <div class="flexsize3">
               <div class="buttonsize">
-                <button href="#">Small</button>
+                <button href="#">US 8</button>
               </div>
               <div class="buttonsize">
-                <button href="#">Medium</button>
+                <button href="#">US 8.5</button>
               </div>
             </div>
             <div class="flexsize4">
               <div  class="buttonsize">
-                <button href="#">Large</button>
+                <button href="#">US 9</button>
               </div>
               <div  class="buttonsize">
-                <button href="#">X-Large</button>
+                <button href="#">US 9.5</button>
               </div>
             </div>
             <div class="flexsize5">
               <div class="buttonsize">
-                <button href="#">XX-Large</button>
+                <button href="#">US 10</button>
               </div>
               <div class="buttonsize">
-                <button href="#">3X-Large</button>
-              </div>
-            </div>
-            <div class="flexsize6">
-              <div  class="buttonsize">
-                <button href="#">4X-Large</button>  
+                <button href="#">US 10.5</button>
               </div>
             </div>
           </div>
