--- a/shop.html
+++ b/shop.html
@@ -110,7 +110,7 @@
         <div class="produk_produk">
           <div class="produk1">
             <div class="box">
-              <img src="./img/produk 1.1.png" width="259px" height="271px" alt="">
+              <img src="./img/Shop1.1.jpg" width="259px" height="271px" alt="">
               <p href="">Nike Pegasus 40</p>
               <p>Rp. 2,399,000</p>
             </div>
