--- a/shop.html
+++ b/shop.html
@@ -110,66 +110,66 @@
         <div class="produk_produk">
           <div class="produk1">
             <div class="box">
-              <img src="./img/Shop1.1.jpg" width="259px" height="271px" alt="">
-              <p href="">Nike Pegasus 40</p>
-              <p>Rp. 2,399,000</p>
+              <img src="./img/Shop1.1.png" width="259px" height="271px" alt="">
+              <p href="#">Sanada Longwing Black</p>
+              <p>Rp. 265,000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 1.2.png" width="259px"height="271px"alt="">
+              <img src="./img/Shop2.1.png" width="259px"height="271px"alt="">
               <p href="">Adidas NMD_S1 Shoes</p>
               <p>Rp. 2,099,000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 1.3.png" width="259px"height="271px" alt="">
+              <img src="./img/Shop3.1.png" width="259px"height="271px" alt="">
               <p href="">Reebok Eenergen LITE Men</p>
               <p>Rp. 2.900.000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 1.4.png" width="259px"height="271px" alt="">
+              <img src="./img/Shop4.1.png" width="259px"height="271px" alt="">
               <p href="">Air Jordan 1 Elevate High</p>
               <p>Rp. 559.000</p>
             </div>
           </div>
           <div class="produk2">
             <div class="box">
-              <img src="./img/produk 2.1.png" width="259px" height="271px" alt="">
+              <img src="./img/Shop1.2.png" width="259px" height="271px" alt="">
               <p href="">Adidas X_PLRBOOST Shoes</p>
               <p>Rp. 2.250.000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 2.2.png" width="259px"height="271px"alt="">
+              <img src="./img/Shop2.2.png" width="259px"height="271px"alt="">
               <p href="">Chuck Taylor Remastered</p>
               <p>Rp. 1.599.000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 2.3.png" width="259px"height="271px" alt="">
+              <img src="./img/Shop3.2.png" width="259px"height="271px" alt="">
               <p href="">Nike Air Max 90</p>
               <p>Rp. 2,099,000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 2.4.png" width="259px"height="271px" alt="">
+              <img src="./img/Shop4.2.png" width="259px"height="271px" alt="">
               <p href="">New Balance 990</p>
               <p>Rp. 4.799.000</p>
             </div>
           </div>
           <div class="produk3">
             <div class="box">
-              <img src="./img/produk 2.1.png" width="259px" height="271px" alt="">
+              <img src="./img/Shop1.3.png" width="259px" height="271px" alt="">
               <p href="">Adidas X_PLRBOOST Shoes</p>
               <p>Rp. 2.250.000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 2.2.png" width="259px"height="271px"alt="">
+              <img src="./img/Shop2.3.png" width="259px"height="271px"alt="">
               <p href="">Chuck Taylor Remastered</p>
               <p>Rp. 1.599.000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 2.3.png" width="259px"height="271px" alt="">
+              <img src="./img/Shop3.3.png" width="259px"height="271px" alt="">
               <p href="">Nike Air Max 90</p>
               <p>Rp. 2,099,000</p>
             </div>
             <div class="box">
-              <img src="./img/produk 2.4.png" width="259px"height="271px" alt="">
+              <img src="./img/Shop4.3.png" width="259px"height="271px" alt="">
               <p href="">New Balance 990</p>
               <p>Rp. 4.799.000</p>
             </div>
