--- a/login.html
+++ b/login.html
@@ -37,11 +37,11 @@
             <div class="pass-link"><a href="#">Forget password?</a></div>
             <div class="field btn">
               <div class="btn-layer"></div>
-              <input type="submit" value="Login">
+              <input type="submit" value="Sign In">
             </div>
             <div class="signup-link">craete account <a href="">Register now</a></div>
           </form>
-          <form action="#" class="signup">
+          <form action="index.html" class="signup">
             <div class="field">
               <input type="text" placeholder="Username " required>
             </div>
@@ -58,7 +58,7 @@
               <div class="btn-layer"></div>
               <input type="submit" value="Sign up">
             </div>
-            <div class="signup-link">Already have an account <a href="">Login</a></div>
+            <div class="signup-link">Already have an account <a href="">Sign In</a></div>
           </form>
         </div>
       </div>
