Update shop.html dan img

--- a/shop.html
+++ b/shop.html
@@ -56,7 +56,7 @@
               <img src="./img/light blue.png" width="35px" height="35px"  alt="">
             </div>
             <div class="flexcolor3">
-              <img src="./img/blue centang.png" width="35px" height="35px"  alt="">
+              <img src="./img/blue.png" width="35px" height="35px"  alt="">
               <img src="./img/purple.png" width="35px" height="35px"  alt="">
               <img src="./img/pink.png" width="35px" height="35px"  alt="">
               <img src="./img/white.png" width="35px" height="35px"  alt="">
@@ -116,62 +116,62 @@
             </div>
             <div class="box">
               <img src="./img/Shop2.1.png" width="259px"height="271px"alt="">
-              <p href="">Adidas NMD_S1 Shoes</p>
-              <p>Rp. 2,099,000</p>
+              <p href="#">Call It Spring</p>
+              <p>Rp. 1.190.000</p>
             </div>
             <div class="box">
               <img src="./img/Shop3.1.png" width="259px"height="271px" alt="">
-              <p href="">Reebok Eenergen LITE Men</p>
-              <p>Rp. 2.900.000</p>
+              <p href="#">Lebron Witness 8 EP</p>
+              <p>Rp. 1,549,000</p>
             </div>
             <div class="box">
               <img src="./img/Shop4.1.png" width="259px"height="271px" alt="">
-              <p href="">Air Jordan 1 Elevate High</p>
-              <p>Rp. 559.000</p>
+              <p href="#">Sanada Longwing Grain<br>Black Genuine Leather</p>
+              <p>Rp. 450,000</p>
             </div>
           </div>
           <div class="produk2">
             <div class="box">
               <img src="./img/Shop1.2.png" width="259px" height="271px" alt="">
-              <p href="">Adidas X_PLRBOOST Shoes</p>
-              <p>Rp. 2.250.000</p>
+              <p href="#">Malden Street</p>
+              <p>Rp. 2.000.000</p>
             </div>
             <div class="box">
               <img src="./img/Shop2.2.png" width="259px"height="271px"alt="">
-              <p href="">Chuck Taylor Remastered</p>
-              <p>Rp. 1.599.000</p>
-            </div>
-            <div class="box">
-              <img src="./img/Shop3.2.png" width="259px"height="271px" alt="">
-              <p href="">Nike Air Max 90</p>
-              <p>Rp. 2,099,000</p>
+              <p href="#">Sanada Derby Black</p>
+              <p>Rp. 600,000</p>
             </div>
             <div class="box">
               <img src="./img/Shop4.2.png" width="259px"height="271px" alt="">
-              <p href="">New Balance 990</p>
-              <p>Rp. 4.799.000</p>
+              <p href="#">Vans Uy Authentic</p>
+              <p>Rp. 549.000</p>
+            </div>
+            <div class="box">
+              <img src="./img/Shop3.2.png" width="259px"height="271px" alt="">
+              <p href="#">Nanoflex Adventure<br>TR Training Shoes</p>
+              <p>Rp. 1.039.200</p>
             </div>
           </div>
           <div class="produk3">
             <div class="box">
               <img src="./img/Shop1.3.png" width="259px" height="271px" alt="">
-              <p href="">Adidas X_PLRBOOST Shoes</p>
-              <p>Rp. 2.250.000</p>
+              <p href="#">Jordan Stadium 90</p>
+              <p>Rp. 2.199.000</p>
             </div>
             <div class="box">
               <img src="./img/Shop2.3.png" width="259px"height="271px"alt="">
-              <p href="">Chuck Taylor Remastered</p>
-              <p>Rp. 1.599.000</p>
+              <p href="#">Ultraboost 1.0 Shoes</p>
+              <p>Rp. 3.300.000</p>
             </div>
             <div class="box">
               <img src="./img/Shop3.3.png" width="259px"height="271px" alt="">
-              <p href="">Nike Air Max 90</p>
-              <p>Rp. 2,099,000</p>
+              <p href="#">Fluxlite Training Shoes</p>
+              <p>Rp. 699.000</p>
             </div>
             <div class="box">
               <img src="./img/Shop4.3.png" width="259px"height="271px" alt="">
-              <p href="">New Balance 990</p>
-              <p>Rp. 4.799.000</p>
+              <p href="#">Air Force 1 LV8</p>
+              <p>Rp. 1,449,000</p>
             </div>
           </div>
         </div>
